--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ctr"]
 	path = ctr
 	url = git@github.com:13596092677/ctr.git
+[submodule "ZOOpt"]
+	path = ZOOpt
+	url = git@github.com:13596092677/ZOOpt.git
